# seqfw

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml  wheels.yml
benchmark/: Dockerfile  PROVENANCE.md  README.md  gen_corpus.py  run_block_rate.py  run_harm_prevented.py
benchmark/corpus/: manifest.json
corpus/fai/fail/: oob.fa.fai
corpus/fai/pass/: ref.fa.fai
corpus/fasta/fail/: duplicate_name.fasta  empty_sequence.fasta
corpus/fasta/pass/: good.fasta
corpus/fastq/fail/: bad_separator.fastq  length_mismatch.fastq  pair_mismatch_R2.fastq
corpus/fastq/pass/: good.fastq  pair_R1.fastq  pair_R2.fastq
corpus/misc/: unrecognized.txt
corpus/vcf/fail/: bad_pos.vcf  format_mismatch.vcf
corpus/vcf/pass/: good.vcf
crates/seqfw-cli/: Cargo.toml
crates/seqfw-cli/src/: main.rs
crates/seqfw-cli/tests/: cli.rs
crates/seqfw-core/: Cargo.toml
crates/seqfw-core/src/: bomb.rs  detect.rs  finding.rs  lib.rs  source.rs
crates/seqfw-core/src/checks/: fasta.rs  fastq.rs  index.rs  mod.rs  safety.rs  vcf.rs
crates/seqfw-py/: Cargo.toml  pyproject.toml
crates/seqfw-py/src/: lib.rs
crates/seqfw-py/tests/: test_seqfw.py
docs/: DEMO.md  RELEASING.md  RULES.md
docs/superpowers/plans/: 2026-06-11-seqfw-asan-benchmark.md  2026-06-11-seqfw-fastq-content-pairing.md  2026-06-11-seqfw-fastq-core-cli.md  2026-06-11-seqfw-format-dispatch-fasta-safety.md  2026-06-11-seqfw-packaging.md  2026-06-11-seqfw-python-bindings.md  2026-06-11-seqfw-vcf-and-index-bounds.md
docs/superpowers/specs/: 2026-06-11-seqfw-genomic-firewall-design.md
recipe/: meta.yaml
scripts/: demo.sh  gen_homebrew_formula.sh  install.sh  render_demo_svg.py
