[package]
name = "seqfw-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "seqfw"
path = "src/main.rs"

[dependencies]
seqfw-core = { path = "../seqfw-core" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
