[package]
name = "seqfw-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "A firewall for genomic data: validate FASTQ/FASTA/VCF and index files at the trust boundary"

[[bin]]
name = "seqfw"
path = "src/main.rs"

[dependencies]
seqfw-core = { path = "../seqfw-core", version = "0.1.0" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
