[package]
name = "seqfw-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Streaming validation core for seqfw — a firewall for genomic data"

[dependencies]
flate2 = "1"
serde = { version = "1", features = ["derive"] }
