[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "seqfw"
description = "A firewall for genomic data — validate FASTQ/FASTA/VCF and index files at the trust boundary"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
readme = "../../README.md"
dynamic = ["version"]
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[tool.maturin]
features = ["pyo3/extension-module"]
